backend/api/tests/integration/snapshots/integration__badge__browse_badges.snap
---
source: tests/integration/badge.rs
expression: body

---
{
  "badges": [
    {
      "id": "57a1eaaa-f182-11ec-a96e-13f3929f5b22",
      "displayName": "badge test",
      "createdBy": "1f241e1b-b537-493f-a230-075cb16315be",
      "description": "Test",
      "memberCount": 0,
      "thumbnail": "https://www.jewishinteractive.org/wp-content/uploads/2021/12/customize.png",
      "createdAt": "[created_at]",
      "lastEdited": "[last_edited]"
    },
    {
      "id": "a3126bec-f185-11ec-b9e4-5fa4e257b5a1",
      "displayName": "badge test2",
      "createdBy": "1f241e1b-b537-493f-a230-075cb16315be",
      "description": "Test2",
      "memberCount": 0,
      "thumbnail": "https://www.jewishinteractive.org/wp-content/uploads/2021/12/customize.png",
      "createdAt": "[created_at]",
      "lastEdited": "[last_edited]"
    },
    {
      "id": "829606d0-f185-11ec-b9e4-5fadfd7252f6",
      "displayName": "badge test1",
      "createdBy": "7b96a41c-e406-11eb-8176-efd86dd7f444",
      "description": "Test1",
      "memberCount": 2,
      "thumbnail": "https://www.jewishinteractive.org/wp-content/uploads/2021/12/customize.png",
      "createdAt": "[created_at]",
      "lastEdited": "[last_edited]"
    }
  ],
  "pages": 1,
  "totalBadgeCount": 3
}
