backend/api/tests/integration/snapshots/integration__badge__create-2.snap
---
source: tests/integration/badge.rs
expression: body

---
{
  "id": "[id]",
  "displayName": "test badge",
  "createdBy": "1f241e1b-b537-493f-a230-075cb16315be",
  "description": "test description",
  "memberCount": 0,
  "thumbnail": "https://www.jewishinteractive.org/wp-content/uploads/2022/05/create-reaction.png",
  "createdAt": "[created_at]",
  "lastEdited": "[last_edited]"
}
