backend/api/tests/integration/snapshots/integration__badge__join-2.snap
---
source: tests/integration/badge.rs
expression: body

---
{
  "members": [
    "1f241e1b-b537-493f-a230-075cb16315be"
  ],
  "count": 1
}
