backend/api/tests/integration/snapshots/integration__badge__leave_badge-2.snap
---
source: tests/integration/badge.rs
expression: body

---
{
  "id": "829606d0-f185-11ec-b9e4-5fadfd7252f6",
  "displayName": "badge test1",
  "createdBy": "7b96a41c-e406-11eb-8176-efd86dd7f444",
  "description": "Test1",
  "memberCount": 1,
  "thumbnail": "https://www.jewishinteractive.org/wp-content/uploads/2021/12/customize.png",
  "createdAt": "[created_at]",
  "lastEdited": "[last_edited]"
}
