backend/api/tests/integration/snapshots/integration__badge__update_badge-2.snap
---
source: tests/integration/badge.rs
expression: body

---
{
  "id": "57a1eaaa-f182-11ec-a96e-13f3929f5b22",
  "displayName": "update badge",
  "createdBy": "1f241e1b-b537-493f-a230-075cb16315be",
  "description": "update description",
  "memberCount": 0,
  "thumbnail": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR0VKBsgtcc6vaIjsj5g9T41vLZsqBXYre_MQ&usqp=CAU",
  "createdAt": "[created_at]",
  "lastEdited": "[last_edited]"
}
