backend/api/tests/integration/snapshots/integration__badge__update_badge.snap
---
source: tests/integration/badge.rs
expression: body

---
{
  "id": "57a1eaaa-f182-11ec-a96e-13f3929f5b22",
  "displayName": "badge test",
  "createdBy": "1f241e1b-b537-493f-a230-075cb16315be",
  "description": "Test",
  "memberCount": 0,
  "thumbnail": "https://www.jewishinteractive.org/wp-content/uploads/2021/12/customize.png",
  "createdAt": "[created_at]",
  "lastEdited": "[last_edited]"
}
